--- a/app/src/main/res/layout/activity_pantallaregistro2.xml
+++ b/app/src/main/res/layout/activity_pantallaregistro2.xml
@@ -8,239 +8,139 @@
     tools:context=".pantallaregistro2">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
         android:orientation="vertical"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
         <androidx.cardview.widget.CardView
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="15dp"
+            android:backgroundTint="#ADC2AD">
+
+        <TextView
+            android:id="@+id/textViewCategoria"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Categoría:"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="8dp"/>
+
+        <Spinner
+            android:id="@+id/spinnerCategoria"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginBottom="35dp"
-            android:backgroundTint="@color/verde"
-            app:cardCornerRadius="15dp">
+            android:layout_marginTop="60dp"
+            android:backgroundTint="@color/hueso"
+            android:layout_below="@id/textViewCategoria"
+            android:layout_marginBottom="16dp"/>
+        </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20sp"
+            app:cardCornerRadius="15dp"
+            android:backgroundTint="#ADC2AD">
+
+        <TextView
+            android:id="@+id/textViewMes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mes:"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:layout_below="@id/spinnerCategoria"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="20dp"/>
+
+        <Spinner
+            android:id="@+id/spinnerMes"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/hueso"
+            android:outlineSpotShadowColor="@color/black"
+            android:layout_below="@id/textViewMes"
+            android:layout_marginBottom="16dp"/>
+        </androidx.cardview.widget.CardView>
+
+        <EditText
+            android:id="@+id/editTextKilosPlastico"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_below="@id/spinnerMes"
+            android:hint="Kilos de Plástico Reciclados"
+            android:layout_marginTop="30dp"
+            android:textSize="22dp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:background="@color/white"
+            android:inputType="numberDecimal"
+            android:layout_marginBottom="16dp"/>
+
+        <EditText
+            android:id="@+id/editTextHojasPapel"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_below="@id/editTextKilosPlastico"
+            android:hint="Número de Hojas de Papel Reciclado"
+            android:textAlignment="center"
+            android:textSize="20dp"
+            android:textColor="@color/black"
+            android:background="@color/white"
+            android:inputType="number"
+            android:layout_marginBottom="16dp"/>
+
+            <Button
+                android:id="@+id/btnGuardar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Registro papel"
-                android:textAlignment="center"
-                android:textColor="@color/black"
+                android:layout_below="@id/editTextHojasPapel"
+                android:backgroundTint="@color/hueso"
+                android:text="Guardar"
+                android:layout_marginTop="25dp"
                 android:textSize="25sp"
-                android:textStyle="bold" />
-        </androidx.cardview.widget.CardView>
+                android:textColor="@color/black" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@color/azul"
-            app:cardCornerRadius="15dp"
-            android:layout_marginBottom="35dp"
-            tools:layout_editor_absoluteX="60dp"
-            tools:layout_editor_absoluteY="128dp">
+    </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="15dp"
-                android:backgroundTint="@color/hueso"
-                app:cardCornerRadius="15dp">
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="   Peso     Kg"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-            </androidx.cardview.widget.CardView>
-
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="50dp"
-                android:backgroundTint="@color/azul"
-                app:cardCornerRadius="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="* 5 Kg     * 20 Kg"
-                    android:textColor="@color/black"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-            </androidx.cardview.widget.CardView>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@color/azul"
-            app:cardCornerRadius="15dp"
-            android:layout_marginBottom="35dp"
-            tools:layout_editor_absoluteX="60dp"
-            tools:layout_editor_absoluteY="268dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="15dp"
-                android:backgroundTint="@color/hueso"
-                app:cardCornerRadius="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="55dp"
-                    android:text="Cantidad"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="50dp"
-                android:backgroundTint="@color/azul"
-                app:cardCornerRadius="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="* 15 Kg     * 35 Kg"
-                    android:textColor="@color/black"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-            </androidx.cardview.widget.CardView>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@color/azul"
-            app:cardCornerRadius="15dp"
-            android:layout_marginBottom="35dp"
-            tools:layout_editor_absoluteX="60dp"
-            tools:layout_editor_absoluteY="412dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="15dp"
-                android:backgroundTint="@color/hueso"
-                app:cardCornerRadius="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="Valor obtenido"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="50dp"
-                android:backgroundTint="@color/azul"
-                app:cardCornerRadius="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="95dp"
-                    android:text=" * $"
-                    android:textColor="@color/black"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-            </androidx.cardview.widget.CardView>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@color/azul"
-            app:cardCornerRadius="15dp"
-            android:layout_marginBottom="35dp"
-            tools:layout_editor_absoluteX="60dp"
-            tools:layout_editor_absoluteY="549dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="15dp"
-                android:backgroundTint="@color/hueso"
-                app:cardCornerRadius="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="85dp"
-                    android:text="Mes"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="50dp"
-                android:backgroundTint="@color/azul"
-                app:cardCornerRadius="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="* Enero   *Febrero"
-                    android:textColor="@color/black"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-            </androidx.cardview.widget.CardView>
-        </androidx.cardview.widget.CardView>
 
         <Button
+            android:id="@+id/btnpantallaCategoria"
             android:layout_width="170dp"
             android:layout_height="50dp"
             android:backgroundTint="@color/hueso"
             android:text="Atras"
-            android:onClick="pantallaCategoria"
             android:textColor="@color/black"
             android:textSize="25sp" />
+
         <Button
+            android:id="@+id/btnpantallaSesionIniciada"
             android:layout_width="170dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/hueso"
             android:text="Inicio"
-            android:onClick="pantallaSesionIniciada"
             android:textColor="@color/black"
             android:textSize="25sp" />
 
