--- a/app/src/main/res/layout/activity_pantallaestadistica.xml
+++ b/app/src/main/res/layout/activity_pantallaestadistica.xml
@@ -51,92 +51,18 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="200dp"
-        android:gravity="bottom"
-        android:orientation="horizontal"
+        android:layout_marginTop="25dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.2">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="20dp"
-            android:layout_height="90dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/verde"
-            app:cardCornerRadius="15dp">
-            <EditText
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:text="OTROS"
-                android:textAlignment="center"
-                android:rotation="-90"
-                android:layout_marginTop="-15sp"
-                android:translationX="-25dp"
-                android:textSize="25sp"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="20dp"
-            android:layout_height="260dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/verde"
-            app:cardCornerRadius="15dp">
-            <EditText
-                android:layout_width="120dp"
-                android:layout_height="270dp"
-                android:text="PAPEL"
-                android:textAlignment="center"
-                android:rotation="-90"
-                android:layout_marginTop="80sp"
-                android:translationX="-25dp"
-                android:textSize="25sp"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="20dp"
-            android:layout_height="150dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/verde"
-            app:cardCornerRadius="15dp">
-
-            <EditText
-                android:layout_width="120dp"
-                android:layout_height="140dp"
-                android:text="VIDRIO"
-                android:textAlignment="center"
-                android:rotation="-90"
-                android:layout_marginTop="30sp"
-                android:translationX="-25dp"
-                android:textSize="25sp"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="20dp"
-            android:layout_height="200dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="25dp"
-            android:backgroundTint="@color/verde"
-            app:cardCornerRadius="15dp">
-            <EditText
-                android:layout_width="150dp"
-                android:layout_height="160dp"
-                android:text="PLASTICO"
-                android:textAlignment="center"
-                android:rotation="-90"
-                android:layout_marginTop="50sp"
-                android:translationX="-40dp"                android:textSize="25sp"/>
-        </androidx.cardview.widget.CardView>
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/barChart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
