--- a/app/src/main/res/layout/activity_pantallaprincipal.xml
+++ b/app/src/main/res/layout/activity_pantallaprincipal.xml
@@ -41,6 +41,7 @@
                 android:background="@color/white"
                 android:backgroundTint="#99B2D0"
                 android:hint="Correo electronico"
+                android:inputType="textEmailAddress"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
