--- a/app/src/main/res/layout/activity_pantallarecuperarcontrasenia.xml
+++ b/app/src/main/res/layout/activity_pantallarecuperarcontrasenia.xml
@@ -65,6 +65,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="Correo electronico"
+                android:inputType="textEmailAddress"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:textAlignment="center"/>
