--- a/app/src/main/res/layout/activity_pantallaregistro.xml
+++ b/app/src/main/res/layout/activity_pantallaregistro.xml
@@ -45,6 +45,7 @@
                 android:layout_height="50dp"
                 android:background="@color/hueso"
                 android:hint="Nombre"
+                android:inputType="text"
                 android:textAlignment="center"
                 android:textSize="25sp"
                 android:textStyle="bold" />
@@ -64,10 +65,10 @@
                 android:layout_height="50dp"
                 android:background="@color/hueso"
                 android:hint="Apellido"
+                android:inputType="text"
                 android:textAlignment="center"
                 android:textSize="25sp"
-
-                android:textStyle="bold"></EditText>
+                android:textStyle="bold"/>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -126,6 +127,7 @@
                 android:layout_height="50dp"
                 android:background="@color/hueso"
                 android:hint="Correo electronico"
+                android:inputType="textEmailAddress"
                 android:textAlignment="center"
                 android:textSize="25sp"
                 android:textStyle="bold" />
