--- a/app/src/main/res/layout/activity_pantallaregistro2.xml
+++ b/app/src/main/res/layout/activity_pantallaregistro2.xml
@@ -58,6 +58,15 @@
             android:textColor="@color/black"
             android:textSize="25dp"
             android:backgroundTint="@color/hueso"/>
+        <Button
+            android:id="@+id/btnBorrarRegistro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Borrar registros"
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            android:backgroundTint="@color/hueso"/>
     </LinearLayout>
 
     <LinearLayout
@@ -65,32 +74,45 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
-
         <Button
-            android:id="@+id/btnpantallaCategoria"
-            android:layout_width="170dp"
-            android:layout_height="50dp"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
             android:backgroundTint="@color/hueso"
             android:text="Atras"
+            android:onClick="pantallaCategoria"
+            android:layout_marginRight="5dp"
             android:textColor="@color/black"
             android:textSize="25sp" />
 
         <Button
-            android:id="@+id/btnpantallaSesionIniciada"
-            android:layout_width="170dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:backgroundTint="@color/hueso"
-            android:text="Inicio"
+            android:onClick="pantallaEstadistica"
+            android:text="Estadistica"
             android:textColor="@color/black"
             android:textSize="25sp" />
-
     </LinearLayout>
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/hueso"
+        android:onClick="pantallaSesionIniciada"
+        android:text="Inicio"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
