--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -20,6 +20,7 @@
         <item>Julio</item>
         <item>Agosto</item>
         <item>Septiembre</item>
+        <item>Octubre</item>
         <item>Noviembre</item>
         <item>Diciembre</item>
     </array>
