--- a/app/src/main/res/layout/activity_categorias.xml
+++ b/app/src/main/res/layout/activity_categorias.xml
@@ -49,7 +49,7 @@
                     android:layout_marginLeft="-10dp"
                     android:layout_marginTop="-5dp"
                     android:contentDescription="imgcategoria"
-                    android:onClick="pantallaRegistropapel"
+                    android:onClick="RegistroPapel"
                     android:scaleType="centerCrop"
                     android:src="@drawable/imgpapel" />
 
@@ -74,7 +74,7 @@
                     android:layout_marginLeft="-10dp"
                     android:layout_marginTop="-5dp"
                     android:contentDescription="imgcategoria"
-                    android:onClick="pantallaEstadistica2_1"
+                    android:onClick="RegistroPlastico"
                     android:scaleType="centerCrop"
                     android:src="@drawable/imgplastico" />
 
@@ -99,7 +99,7 @@
                     android:layout_marginLeft="-10dp"
                     android:layout_marginTop="-5dp"
                     android:contentDescription="imgcategoria"
-                    android:onClick="pantallaEstadistica2_2"
+                    android:onClick="RegistroVidrio"
                     android:scaleType="centerCrop"
                     android:src="@drawable/imgvidrio" />
 
