--- a/app/src/main/res/layout/activity_pantallaregistro2.xml
+++ b/app/src/main/res/layout/activity_pantallaregistro2.xml
@@ -35,7 +35,7 @@
             android:hint="Cantidad de material reciclado (kg)"
             android:inputType="numberDecimal" />
         <Spinner
-            android:id="@+id/spinnerPapel"
+            android:id="@+id/spinnerMaterial"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginBottom="16dp"
