--- a/app/src/main/res/layout/activity_pantallaestadisticapapel.xml
+++ b/app/src/main/res/layout/activity_pantallaestadisticapapel.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/fondo_principal2"
     android:orientation="vertical"
-    tools:context=".pantallaestadistica2_2">
+    tools:context=".pantallaestadisticapapel">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
