--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="array_papel">
+        <item>Seleccionar</item>
         <item>Papel</item>
     </array>
     <array name="array_plastico">
+        <item>Seleccionar</item>
         <item>Plástico</item>
     </array>
     <array name="array_vidrio">
+        <item>Seleccionar</item>
         <item>Vidrio</item>
     </array>
 
     <array name="array_mes">
+        <item>Seleccionar mes</item>
         <item>Enero</item>
         <item>Febrero</item>
         <item>Marzo</item>
