--- a/app/src/main/res/layout/activity_pantallaregistropapel.xml
+++ b/app/src/main/res/layout/activity_pantallaregistropapel.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_principal2"
-    tools:context=".pantallaregistro2">
+    tools:context=".Modelos.RegistroPapel">
 
     <LinearLayout
         android:id="@+id/linearLayout4"
@@ -32,6 +32,7 @@
             android:layout_height="50dp"
             android:layout_marginBottom="16dp"
             android:background="@color/hueso"
+            android:backgroundTint="#99B2D0"
             android:hint="Cantidad de material reciclado (kg)"
             android:inputType="numberDecimal" />
         <Spinner
@@ -39,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginBottom="16dp"
+            android:backgroundTint="#99B2D0"
             android:background="@color/hueso"
             android:visibility="visible"/>
         <Spinner
@@ -46,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginBottom="16dp"
+            android:backgroundTint="#99B2D0"
             android:background="@color/hueso"
             android:hint="Seleccione Mes" />
         <Button
@@ -56,7 +59,7 @@
             android:text="Registrar"
             android:textColor="@color/black"
             android:textSize="25dp"
-            android:backgroundTint="@color/hueso"/>
+            android:backgroundTint="#C8E0B4"/>
         <Button
             android:id="@+id/btnBorrarRegistro"
             android:layout_width="match_parent"
@@ -65,7 +68,7 @@
             android:text="Borrar registros"
             android:textColor="@color/black"
             android:textSize="25dp"
-            android:backgroundTint="@color/hueso"/>
+            android:backgroundTint="#C8E0B4"/>
     </LinearLayout>
 
     <LinearLayout
@@ -82,9 +85,9 @@
         <Button
             android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/hueso"
             android:text="Atras"
             android:onClick="pantallaCategoria"
+            android:backgroundTint="#99B2D0"
             android:layout_marginRight="5dp"
             android:textColor="@color/black"
             android:textSize="25sp" />
@@ -93,7 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:backgroundTint="@color/hueso"
+            android:backgroundTint="#99B2D0"
             android:onClick="pantallaEstadistica"
             android:text="Estadistica"
             android:textColor="@color/black"
