--- a/app/src/main/res/layout/activity_pantallaestadisticavidrio.xml
+++ b/app/src/main/res/layout/activity_pantallaestadisticavidrio.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -20,30 +21,49 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="230dp"
-            android:layout_height="175dp"
-            android:layout_marginLeft="100sp"
+            android:layout_width="190dp"
+            android:layout_height="140dp"
             android:backgroundTint="@color/azul"
             app:cardCornerRadius="15dp">
 
             <ImageView
-                android:layout_width="130dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="60dp"
+                android:layout_width="100dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="50dp"
                 android:layout_marginTop="15dp"
                 android:src="@drawable/estadistica" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="65dp"
-                android:layout_marginTop="135dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="105dp"
                 android:text="Estadistica"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
         </androidx.cardview.widget.CardView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Vidrio"
+                    android:textAlignment="center"
+                    android:layout_gravity="center"
+                    android:textSize="25dp" />
+
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
