--- a/app/src/main/res/layout/activity_pantallaregistro.xml
+++ b/app/src/main/res/layout/activity_pantallaregistro.xml
@@ -141,9 +141,11 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/text_terminos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
+                android:autoLink="web"
                 android:text="Acepto terminos y condiciones"
                 android:textColor="@color/white"
                 android:textSize="15sp"
